--- a/static/contact/css/contact.css
+++ b/static/contact/css/contact.css
@@ -2,18 +2,18 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
-    font-family: 'Montserrat';
-    background-color: #E0E7E9;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #354649 ;
     display: block;
 }
 section{
     height: 100vh;
     width: 100%;
-    background-color: #E0E7E9;
-    
+    background-color: #354649;
     flex-direction: column;
 }
 
@@ -23,10 +23,10 @@ section{
     margin: 0 auto;
     padding: 20px;
     box-shadow: 0px 0px 20px #000;
-    background-color: rgb(243, 142, 142);
+    background-color: #56c6c6;
     border-radius: 8px;
     margin-bottom: 10%;
-    margin-top: 15%;
+    margin-top: 7%;
        
 }
 .form-group{
@@ -39,10 +39,14 @@ section{
     width: 100%;
     padding: 5px;
     font-size: 18px;
-    border: 1px solid rgba(128, 128, 128, 0.199);
+    border: 1px solid #56c6c6;
     margin-top: 5px;
-
-
+}
+.title{
+    text-align: center;
+    margin-top: 10%;
+    color: white;
+    font-size: 50px;
 }
 textarea{
     resize: vertical;
@@ -55,15 +59,17 @@ button[type="submit"]{
     padding: 20px;
     font-size: 24px;
     border-radius: 8px;
-    font-family: 'Montserrat';
-    color: rgb(27, 166, 247);
+    font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #56c6c6;
+    font-weight: bold;
     text-align: center;
     cursor: pointer;
     margin-top: 10px;
     transition: .3s ease background-color;
 }
 button[type="submit"]:hover{
-    background-color: rgb(214, 226, 236);   
+    background-color: #354649;   
+    transition: 0.5s;
 
 }
 #status{
