--- a/static/game/css/game.css
+++ b/static/game/css/game.css
@@ -1,35 +1,53 @@
 
 body{
-  background-color: #A3C6C4 ;
+  background-color: #354649  ;
   width: 100%;
-  color: rgb(2, 2, 2);
+  color: white;
+}
+*{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #image{
   margin-top: 50px;
   margin-bottom: 50px;
-  margin-right: 20%;
-  margin-left: 20%;
-  width: 60%;
-  height: 600px;
+  margin-right: 30%;
+  margin-left: 30%;
+  width: 40%;
+  height: 500px;
   background-size: cover;
 }
 .map-list{
   margin-left: 10%;  
 }
 .caption{
-  color: black;
+  color: rgb(255, 255, 255);
+}
+a{
+  color: #56c6c6
 }
 #header{
   font-size: 50px;
   padding-top: 50px;
   text-align: center;
-  color: rgb(3, 3, 3);
+  color: rgb(255, 255, 255);
   font-weight: bold;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 #title{
   font-weight: bold;
+  text-align: center;
+  font-size: 40px;
+  color: #56c6c6;
+}
+.subtitle{
+  font-size: larger;
+  margin-left: 15%;
+  font-weight: bold;
+  color: #56c6c6
+}
+strong{
+  color: #56c6c6;
 }
 .text{
   width: 80%;
@@ -170,7 +188,7 @@ body{
 
 .item .caption {
   width: 40%;
-  color: rgb(12, 11, 11);
+  color: rgb(255, 251, 251);
   margin-left: 5%;
   
   
