--- a/static/index/css/index.css
+++ b/static/index/css/index.css
@@ -4,97 +4,56 @@
          /* Location of the image */
          background-image: url("ds1.jpg");
         /* Background image is centered vertically and horizontally at all times */
-        background-position: center center;
-        
+        background-position: center center;        
         /* Background image doesn't tile */
-        background-repeat: no-repeat;
-        
+        background-repeat: no-repeat;        
         /* Background image is fixed in the viewport so that it doesn't move when 
            the content's height is greater than the image's height */
-        background-attachment: fixed;
-        
+        background-attachment: fixed;        
         /* This is what makes the background image rescale based
            on the container's size */
-        background-size: cover;
-        
-        /* Set a background color that will be displayed
-           while the background image is loading */
-             
-        
-      
+        background-size: cover;         
 }
-a{
-  color: white;
+.image-head img{
+  filter: blur(5px);
 }
-@media screen and (min-width: 601px) {
-    #a1 {
-        margin-top: 100px;
-        font-size: 10vh;
-        font-weight: bold;
-        color: white;
-        margin-left: 20%;
-        margin-bottom: 40px;
-  }
-    #a2 {
-      font-size: 10vh;
-      font-weight: bold;
-      color: white;
-      margin-left: 25%;
-      margin-bottom: 40px;
-    }
-    #a3 {
-        font-size: 10vh;
-        font-weight: bold;
-        color: white;
-        margin-left: 30%;
-        margin-bottom: 80px;
-    }
-    .links {
-        float:left;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        z-index: 2;
-      }
-      .links a {
-        padding:8px;
-        margin-top:7px;
-        display:inline;
-        width:100%;
-    }
-    
+.links {
+  float:left;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
 }
-@media screen and (max-width: 600px) {
-  #a1{
-      margin-top: 50px;
-      font-size: 8vh;
-      font-weight: bold;
-      color: white;      
-      margin-left: 20%;
-      margin-bottom: 10px;
+.links a {
+  padding:8px;
+  margin-top:7px;
+  display:inline;
+  width:100%;
 }
-  #a2{
-     font-size: 8vh;
-     font-weight: bold;
-    color: white;
-    margin-top: 30px;
-    margin-left: 25%;
-    margin-bottom: 10px;
-  }
-  #a3{
-      font-size: 8vh;
-      font-weight: bold;
-      color: white;
-      margin-left: 30%;
-      margin-top: 30px;
-      margin-bottom: 30px;
-  }
+.ml15 {
+  overflow: hidden;
+  width: 80%;
+  font-weight: 800;
+  font-size: 4em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  margin-left: 10%;
+  text-align: center;
+}
+
+.ml15 .word {
+  color:#ffffff;
+  display: inline-block;
+  line-height: 0.8em;
+}      
+
+@media screen and (max-width: 600px) {  
   .links {
       position: fixed;
       bottom: 0;
       width: 100%;
       float:left;
-       z-index: 2;
+      z-index: 2;
     }
     .links a {
       padding:8px;
@@ -102,8 +61,24 @@ a{
       display:inline;
       width:100%;
   }
+  .ml15{
+    font-size: 30px;
+    letter-spacing: 0.2em;
+  }
+  .ml15 .word{
+    line-height: 2em;
+  }
 }
-  
+@media screen and (min-width: 1600px){
+  .ml15{
+    font-size: 5em;
+  }
+  .ml15 .word{
+    line-height: 1em;
+  }
+}
+
+
 
 
 
