--- a/static/blog/css/blog.css
+++ b/static/blog/css/blog.css
@@ -2,11 +2,16 @@ body{
     background-color: #363738;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: larger;
+    position: relative;
+    width: 98vw;
+    text-align: center;
 }
 .article-list {
     color: #ffffff;
     background-color: inherit;
-  }
+    height: 100%;
+    padding-bottom: 20%;
+}
   
   .article-list p {
     color: #ffffff;
@@ -57,7 +62,8 @@ body{
   .article-list .item .description {
     font-size: 14px;
     margin-top: 15px;
-    margin-bottom: 0;
+    margin-bottom: 15px;
+    padding-bottom: 10%;
   }
   
   .article-list .item .action {
@@ -73,6 +79,57 @@ body{
     -webkit-transform: scale(1.18);
     -ms-transform: scale(1.18);
     transform: scale(1.18);
+  }
+  .footer{
+    background-color: inherit;
+    border-top: 2px solid  #4b4c4d;
+    color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    text-align: center;
+    padding: 40px 0;
+    margin-top: 100px;
+  } 
+  .footer li{
+    padding: 0 10px;
+  } 
+  .footer ul a{
+    color: inherit;
+    bottom: 5px;
+    vertical-align: bottom;
+  }
+  .footer ul a:hover{
+    color: #56c6c6 ;
+    transition: 0.5;
+  }
+  .footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+  }
+  .footer .social > a {
+    font-size: 24px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    border: 1px solid #56c6c6;
+    margin: 0 8px;
+    color: white;
+    opacity: 0.5;
+  }
+  .footer .social > a:hover {
+    color: #56c6c6;
+    opacity: 0.9;
+    transition: 0.5s;
+  }
+  @media screen and (max-width: 800px){
+    .footer{
+      height: 5%;
+    }
   }
   
   
