--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -4,13 +4,13 @@ html {
 }
 body{
     background-color: #354649  ;
-    font-size: x-large;
+    font-size: 30px;
     padding: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;    
 }
 .bodyMain {
     background-image: url("earth.jpg");
-    height: 800px;
+    height: 600px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -20,7 +20,7 @@ body{
 
 .header h2{
     text-align: left;
-    font-size: 30px;
+    font-size: inherit;
     font-style: italic;
     color: rgb(250, 250, 250);
     margin-bottom: 40px;
@@ -75,27 +75,75 @@ p{
   background-color: #56c6c6;
 }
 #prev:hover{
-  background-color: green;
+  background-color: #117777;
   transition: 0.5s;
 }
 #next:hover{
-  background-color: green;
+  background-color: #117777;
   transition: 0.5s;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+@media screen and (max-width: 1400px){
+  .body{
+    height: 700px;
+  }
+  body{
+    font-size: 30px;
+  }
 }
 @media screen and (max-width: 1200px){
   .body{
     height: 600px;
+  }
+  body{
+    font-size: 25px;
+  }
+  .bodyMain{
+    height: 600px;
+  }
+}
+@media screen and (max-width: 1000px){
+  .body{
+    height: 500px;
+    font-size: 20px;
   }
 }
 @media screen and (max-width: 800px){
   .body{
     height: 400px;
+    font-size: 20px;
+  }
+  body{
+    font-size: 20px;
   }
 }
-@media screen and (max-width: 1200px){
+
+@media screen and (max-width: 600px){
   .body{
-    height: 600px;
+    height: 300px;
+    font-size: 15px;
+  }
+  .bodyMain{
+    height: 400px;
+  }
+  body{
+    font-size: 15px;
   }
 }
+@media screen and (max-width: 500px){
+  .body{
+    height: 200px;
+    font-size: 15px;
+  }
+  .bodyMain{
+    height: 400px;
+  }
+  body{
+    font-size: 15px;
+  }
+}
+
 
 
