--- a/static/what-is/css/what-is.css
+++ b/static/what-is/css/what-is.css
@@ -3,7 +3,7 @@ body{
   color: white;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 98vw;
-  height: 100vh;    
+  height: 97vh;    
 
 }
 .container{
@@ -14,6 +14,9 @@ body{
   background-color: inherit;
   text-align: center;
   vertical-align: middle;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 #ml1, #ml2,#ml3,#ml4,#ml5,#ml6{
   position: absolute;
@@ -79,6 +82,5 @@ a{
   }
   h2{
       font-size: 30px;
-  }
-  p
+  }  
 }  
